@@ -19,15 +19,17 @@ function setMenuSize() {
     // Set a class on the menu which determines if the small or big menu
     // should be shown.
     var menu = jq('#responsive-menu');
+    var forced_small_flag = menu.attr('data-force-small');
     var min_width = menu.attr('data-min-width');
     if (typeof min_width == 'undefined') {
         min_width = 0;
     }
-    var newMenuType = 'small-menu';
-    var oldMenuType = 'big-menu';
-    if (jq(window).width() >= min_width) {
-        newMenuType = 'big-menu';
-        oldMenuType = 'small-menu';
+
+    var newMenuType = 'big-menu';
+    var oldMenuType = 'small-menu';
+    if (forced_small_flag == 'True' || jq(window).width() < min_width) {
+        newMenuType = 'small-menu';
+        oldMenuType = 'big-menu';
     }
     menu.addClass(newMenuType).removeClass(oldMenuType);
     resetSmallMenu();
